--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "engines": {
         "vscode": "^1.35.0"
     },
+    "repository": "git@github.com:vnovick/reason-snippets.git",
     "publisher": "VladimirNovick",
     "categories": [
         "Snippets"
