Remove invalid comma for react.component

--- a/snippets/reason.json
+++ b/snippets/reason.json
@@ -32,7 +32,7 @@
 "ReasonReact component": {
   "prefix": "rmlcmp",
   "body": [
-      "[@react.component],",
+      "[@react.component]",
       "let make = ($1) => {",
       "  $2",
       "}"
